--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,3 @@
-/*!*****************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/Slide.css ***!
-  \*****************************************************************/
-@import url(https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap);
 /*!****************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/react-speaker-board/styles/Base.css ***!
   \****************************************************************************************************/
@@ -27,19 +23,49 @@
   padding: 0;
 }
 
-.Control {
-  display: flex;
-  flex-direction: row;
-  position: absolute;
-  margin: 50px;
-  bottom: 0;
+/* _::-webkit-full-page-media, _:future, :root .Control {
+  position: static;
+} */
+
+.fade {
+  animation: fadeIn 0.2s ease 0.3s 1 normal;
+}
+@keyframes fadeIn {
+  0% { 
+    opacity: 0
+  }
+  100% {
+    opacity: 1
+  }
 }
 
 /*!*******************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/react-speaker-board/styles/Control.css ***!
   \*******************************************************************************************************/
+.Control-wrap {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.background-none {
+  background-color: rgba(0,0,0,0);
+}
+
+.background-light {
+  background-color: rgba(255,255,255,0.3);
+}
+
+.background-dark {
+  background-color: rgba(0,0,0,0.3);
+}
+
 .Control {
-  align-self: flex-end;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: relative;
+  margin: 20px;
 }
 
 button {
@@ -60,7 +86,6 @@ button {
 .MainTitle {
   text-align: center;
   font-weight: bold;
-  font-size: 72px;
   margin: 0;
   white-space: pre-wrap;
 }
@@ -82,38 +107,69 @@ button {
   align-items: flex-end;
 }
 
-/*!***********************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/react-speaker-board/styles/MainContent.css ***!
-  \***********************************************************************************************************/
-.MainContent {
+.size-xsmall {
+  font-size: 0.625rem;
+}
+
+.size-small {
+  font-size: 1.25rem;
+}
+
+.size-medium {
+  font-size: 1.875rem;
+}
+
+.size-large {
+  font-size: 2.5rem;
+}
+
+.size-xlarge {
+  font-size: 3.125rem;
+}
+
+.size-xxlarge {
+  font-size: 3.75rem;
+}
+
+.size-xxxlarge {
+  font-size: 4.375rem;
+}
+
+/*!*******************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/react-speaker-board/styles/Content.css ***!
+  \*******************************************************************************************************/
+.Content {
   font-weight: bold;
-  font-size: 30px;
   margin: 0;
   white-space: pre-wrap;
 }
 
 .size-xsmall {
-  font-size: 10px;
+  font-size: 0.625rem;
 }
 
 .size-small {
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 .size-medium {
-  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 .size-large {
-  font-size: 40px;
+  font-size: 2.5rem;
 }
 
 .size-xlarge {
-  font-size: 50px;
+  font-size: 3.125rem;
 }
 
 .size-xxlarge {
-  font-size: 60px;
+  font-size: 3.75rem;
+}
+
+.size-xxxlarge {
+  font-size: 4.375rem;
 }
 
 .center {
@@ -139,7 +195,6 @@ button {
 .SectionTitle {
   text-align: center;
   font-weight: bold;
-  font-size: 50px;
   margin: 0;
   white-space: pre-wrap;
 }
@@ -159,6 +214,34 @@ button {
 .right {
   display: flex;
   align-items: flex-end;
+}
+
+.size-xsmall {
+  font-size: 0.625rem;
+}
+
+.size-small {
+  font-size: 1.25rem;
+}
+
+.size-medium {
+  font-size: 1.875rem;
+}
+
+.size-large {
+  font-size: 2.5rem;
+}
+
+.size-xlarge {
+  font-size: 3.125rem;
+}
+
+.size-xxlarge {
+  font-size: 3.75rem;
+}
+
+.size-xxxlarge {
+  font-size: 4.375rem;
 }
 
 /*!******************************************************************************************************!*\
@@ -227,7 +310,7 @@ button {
 }
 
 .sky-theme {
-  background: radial-gradient(#4facfe, #00f2fe);
+  background: radial-gradient(#00f2fe, #4facfe);
 }
 
 .green-theme {
@@ -238,9 +321,9 @@ button {
   background: radial-gradient(#2a2845, #030033);
 }
 
-/*!*********************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/Slide.css (1) ***!
-  \*********************************************************************/
+/*!*****************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/Slide.css ***!
+  \*****************************************************************/
 .code {
   color: #fff;
   background-color: #000042;
@@ -300,6 +383,9 @@ button {
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/reset.css ***!
   \*****************************************************************/
 body {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
+  font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro", "Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "メイリオ", sans-serif;
 }
 
