--- a/styles/Slide.css
+++ b/styles/Slide.css
@@ -1,4 +1,4 @@
-.code {
+.slide-code {
   color: #fff;
   background-color: #000042;
   border-radius: 10px;
@@ -8,47 +8,22 @@
   font-family: 'Source Code Pro', monospace;
 }
 
-.list {
-  margin: 10px 0;
+.slide-list {
+  margin: 15px;
 }
 
-.link {
+.show-docs-text {
   text-decoration: none;
-}
-
-.link:hover {
-  text-decoration: none;
-}
-
-.link:visited {
-  text-decoration: none;
-}
-
-.GitHub-text {
-  background-color: #121212;
-  color: #fff;
-  padding: 10px 30px;
+  background-color: #fff;
+  color: #000;
+  padding: 20px 40px;
   font-size: 20px;
   cursor: pointer;
-  border-radius: 0 10px 10px 0;
+  border-radius: 10px;
 }
 
-.GitHub {
+.show-docs {
   display: flex;
   flex-direction: row;
-}
-
-.logo {
-  background-color: #fff;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px 0 0 10px;
-}
-
-.logo img {
-  width: 40px;
-  height: 40px;
+  text-decoration: none;
 }
