--- a/styles/docs.css
+++ b/styles/docs.css
@@ -1,37 +1,58 @@
 .docs-base {
-  position: relative;
   width: 100%;
   height: 100vh;
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
   line-height: 2;
+  background-color: #fff;
 }
 
 .docs-base a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 .docs-menu {
   position: fixed;
-  width: 20%;
-  height: 100%;
-  padding: 40px 20px;
-  border-right: solid 1px #dcdcdc;
-  background-color: #f0f0f0;
+  top: 0;
+  width: 100%;
+  border-bottom: solid 1px #dcdcdc;
+  background-color: #fff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  z-index: 50;
+}
+
+.docs-menu .docs-menu-title {
+  margin: 20px;
+  background-color: #fff;
+  color: #222;
+  cursor: pointer;
 }
 
 .docs-menu ul {
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: row;
+  margin: 0 20px;
+  background-color: #fff;
+}
+
+.docs-menu-list {
+  margin: 0 10px;
+  background-color: #fff;
 }
 
 .docs-menu li {
   list-style-type: none;
   text-decoration: none;
   font-size: 17px;
+  cursor: pointer;
 }
 
 .docs-menu a {
@@ -42,7 +63,10 @@
 .docs-page {
   width: 80%;
   height: 100%;
-  margin-left: auto;
+  display: flex;
+  justify-content: center;
+  padding: 40px;
+  position: relative;
 }
 
 .docs-wrapper {
