--- a/styles/docs.css
+++ b/styles/docs.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   margin: 0;
-  padding: 0;
+  padding: 30px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -62,14 +62,16 @@
 
 .docs-page {
   width: 80%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
-  padding: 40px;
+  padding: 0 40px;
   position: relative;
 }
 
 .docs-wrapper {
+  height: auto;
   padding: 30px 80px;
   margin: 30px 80px;
+  margin-bottom: 20px;
 }
